feature: design improvements
- Add better error types.
- Replace `Entity` with a better `Body` type.
- Add convenience methods for getting the response body as text or JSON.
- Add convenience methods for POST, PUT, and DELETE requests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "chttp"
 version = "0.1.0"
 authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
 
+[features]
+default = ["json"]
+
 [dependencies]
 curl = "0.4"
 http = "0.1.1"
+
+[dependencies.json]
+version = "0.11"
+optional = true
