--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,13 @@ default = []
 [dependencies]
 curl = "0.4"
 http = "0.1"
+log = "0.4"
 ringtail = "0.1"
 
 [dependencies.json]
 version = "0.11"
 optional = true
+
+[dev-dependencies]
+env_logger = "0.5"
+rouille = "2.1"
