--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ slab = "0.4"
 version = "0.11"
 optional = true
 
+[target.'cfg(unix)'.dependencies]
+nix = "0.11"
+
 [dev-dependencies]
 env_logger = "0.5"
 rouille = "2.1"
