--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chttp"
-version = "0.1.5"
+version = "0.2.0"
 description = "The practical HTTP client that is fun to use."
 authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
 license = "MIT"
@@ -23,6 +23,7 @@ slab = "0.4"
 
 [dependencies.curl]
 git = "https://github.com/alexcrichton/curl-rust"
+rev = "ae1f1f07f18f0118bf2bddee37fce799b9c62599"
 
 [dependencies.json]
 version = "0.11"
