--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ lazy_static = "1"
 lazycell = "1.0"
 log = "0.4"
 slab = "0.4"
+withers_derive = "0.2"
 
 [dependencies.curl]
 git = "https://github.com/alexcrichton/curl-rust"
