--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ default = []
 [dependencies]
 bytes = "0.4"
 crossbeam-channel = "0.2"
+curl = "~0.4.15"
 futures-preview = "0.2"
 http = "0.1"
 lazy_static = "1"
@@ -21,10 +22,6 @@ lazycell = "1.0"
 log = "0.4"
 slab = "0.4"
 withers_derive = "0.2"
-
-[dependencies.curl]
-git = "https://github.com/alexcrichton/curl-rust"
-rev = "ae1f1f07f18f0118bf2bddee37fce799b9c62599"
 
 [dependencies.json]
 version = "0.11"
