--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ default = []
 
 [dependencies]
 bytes = "0.4"
-chashmap = "2.2"
+cookie = "0.11"
 crossbeam-channel = "0.3"
 futures-preview = "0.2.2"
 http = "0.1"
