--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,13 @@ status = "actively-developed"
 
 [features]
 default = ["cookies", "http2", "psl"]
-cookies = ["psl"]
+cookies = ["chrono"]
 http2 = ["curl/http2"]
 async-api = []
 middleware-api = []
 
 [dependencies]
 bytes = "0.4"
-chrono = "0.4"
 crossbeam-channel = "0.3"
 curl = "0.4"
 futures-preview = "0.2.2"
@@ -32,6 +31,10 @@ log = "0.4"
 regex = "1.1"
 slab = "0.4"
 withers_derive = "0.2"
+
+[dependencies.chrono]
+version = "0.4"
+optional = true
 
 [dependencies.json]
 version = "0.11"
