--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ lazycell = "1.2"
 log = "0.4"
 regex = "1.1"
 slab = "0.4"
+sluice = "0.4.0-alpha.1"
 static_assertions = "0.3"
 withers_derive = "0.2"
 
