--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ middleware-api = []
 
 [dependencies]
 bytes = "0.4"
-# crossbeam = "0.7"
+crossbeam = "0.7"
 curl = "^0.4.20"
 http = "0.1"
 lazy_static = "1"
