--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,10 @@ middleware-api = []
 
 [dependencies]
 bytes = "0.4"
-crossbeam = "0.7"
+crossbeam-channel = "0.3"
 curl = "^0.4.20"
 http = "0.1"
 lazy_static = "1"
-lazycell = "1.2"
 log = "0.4"
 regex = "1.1"
 slab = "0.4"
@@ -43,10 +42,6 @@ version = "0.3.0-alpha.16"
 
 [dependencies.chrono]
 version = "0.4"
-optional = true
-
-[dependencies.json]
-version = "0.11"
 optional = true
 
 [dependencies.psl]
