Factor out text methods into a common future type

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ auto_enums = "0.5"
 bytes = "0.4"
 crossbeam-channel = "0.3"
 curl = "^0.4.20"
+curl-sys = "^0.4.20"
 futures-preview = "=0.3.0-alpha.17"
 http = "0.1"
 lazy_static = "1"
