--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,11 +49,10 @@ optional = true
 
 [dev-dependencies]
 criterion = "0.2"
+env_logger = "0.6"
 rayon = "1"
 reqwest = "0.9"
-
-[dev-dependencies.utilities]
-path = "utilities"
+rouille = "3"
 
 [[bench]]
 name = "download"
@@ -62,6 +61,3 @@ harness = false
 [[example]]
 name = "async"
 required-features = ["nightly"]
-
-[workspace]
-members = ["utilities"]
