--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/psl/list"]
 	path = src/psl/list
-	url = git@github.com:publicsuffix/list.git
+	url = https://github.com/publicsuffix/list.git
