--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/psl/list"]
-	path = src/psl/list
+[submodule "psl"]
+	path = src/cookies/psl/list
 	url = https://github.com/publicsuffix/list.git
