--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ http = "0.1"
 lazy_static = "1"
 log = "0.4"
 slab = "0.4"
-sluice = "0.4.0-alpha.2"
+sluice = "0.4"
 
 [dependencies.chrono]
 version = "0.4"
