--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ crossbeam-channel = "0.3"
 curl = "^0.4.20"
 curl-sys = "^0.4.20"
 futures-io-preview = "=0.3.0-alpha.17"
-futures-util-preview = "=0.3.0-alpha.17"
 http = "0.1"
 lazy_static = "1"
 log = "0.4"
@@ -43,6 +42,10 @@ sluice = "0.4"
 [dependencies.chrono]
 version = "0.4"
 optional = true
+
+[dependencies.futures-util-preview]
+version = "=0.3.0-alpha.17"
+features = ["io"]
 
 [dependencies.parking_lot]
 version = "0.9"
