Update crate keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.3"
 description = "The practical HTTP client that is fun to use."
 authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
 license = "MIT"
-keywords = ["http", "request", "client"]
+keywords = ["http", "request", "client", "async", "curl"]
 categories = ["web-programming::http-client"]
 repository = "https://github.com/sagebind/chttp"
 documentation = "https://docs.rs/chttp/"
