--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+name: ci
 on: push
 
 jobs:
@@ -13,6 +14,8 @@ jobs:
       - uses: actions/checkout@master
         with:
           submodules: true
+
+      - run: rustup default 1.36.0
 
       - run: cargo test --features psl -- --test-threads=8
         env:
