--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
       matrix:
         platform:
           - ubuntu-latest
-          # - macos-latest
+          - macos-latest
           - windows-latest
     runs-on: ${{ matrix.platform }}
     steps:
