--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Rust (macOS)
         run: |
           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
-          echo "source $HOME/.cargo/env" >> $HOME/.bashrc
+          echo $PATH
         if: runner.os == 'macOS'
 
       - run: rustup default 1.36.0
