--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,25 +16,17 @@ jobs:
           submodules: true
 
       - name: Install Rust (macOS)
-        run: |
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
-          echo "$HOME/.cargo/bin" >> /etc/paths
+        run: curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
         if: runner.os == 'macOS'
 
-      - run: |
-          source $HOME/.cargo/env
-          rustup default 1.36.0
+      - run: ~/.cargo/bin/rustup default 1.36.0
 
-      - run: |
-          source $HOME/.cargo/env
-          cargo test --features psl -- --test-threads=8
+      - run: ~/.cargo/bin/cargo test --features psl -- --test-threads=8
         env:
           RUST_BACKTRACE: 1
           RUST_LOG: warn
 
-      - run: |
-          source $HOME/.cargo/env
-          cargo run --release --example simple
+      - run: ~/.cargo/bin/cargo run --release --example simple
         env:
           RUST_BACKTRACE: 1
           RUST_LOG: warn
