--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
           submodules: true
 
       - name: Install Rust (macOS)
-        run: curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
+        run: |
+          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
+          echo "source $HOME/.cargo/env" >> $HOME/.bash_profile
         if: runner.os == 'macOS'
 
       - run: rustup default 1.36.0
