--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,28 +10,27 @@ jobs:
           - macos-latest
           - windows-latest
     runs-on: ${{ matrix.platform }}
+    fail-fast: false
     steps:
       - uses: actions/checkout@master
         with:
           submodules: true
 
       - name: Install Rust (macOS)
-        run: |
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
-          echo "source $HOME/.cargo/env" >> $HOME/.bashrc
+        run: curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.36.0
         if: runner.os == 'macOS'
 
       - run: rustup default 1.36.0
-        shell: "bash {0}"
+        shell: "bash --rcfile $HOME/.cargo/env {0}"
 
       - run: cargo test --features psl -- --test-threads=8
-        shell: "bash {0}"
+        shell: "bash --rcfile $HOME/.cargo/env {0}"
         env:
           RUST_BACKTRACE: 1
           RUST_LOG: warn
 
       - run: cargo run --release --example simple
-        shell: "bash {0}"
+        shell: "bash --rcfile $HOME/.cargo/env {0}"
         env:
           RUST_BACKTRACE: 1
           RUST_LOG: warn
