--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,13 @@ jobs:
         shell: "bash -l {0}"
         env:
           RUST_BACKTRACE: 1
-          RUST_LOG: isahc=debug
+          RUST_LOG: isahc=debug,mockito=trace
 
       - run: cargo run --release --example simple
         shell: "bash -l {0}"
         env:
           RUST_BACKTRACE: 1
-          RUST_LOG: isahc=debug
+          RUST_LOG: isahc=debug,mockito=trace
 
   test-nightly:
     runs-on: ubuntu-latest
@@ -45,4 +45,4 @@ jobs:
       - run: cargo test --features psl,nightly -- --test-threads=8
         env:
           RUST_BACKTRACE: 1
-          RUST_LOG: isahc=debug
+          RUST_LOG: isahc=debug,mockito=trace
