Initial design for request progress and statistsics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ curl-sys = "^0.4.20"
 futures-io-preview = "=0.3.0-alpha.17"
 http = "0.1"
 lazy_static = "1"
+lazycell = "1.2"
 log = "0.4"
 slab = "0.4"
 sluice = "0.4"
