--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ middleware-api = []
 [dependencies]
 bytes = "0.4"
 crossbeam-channel = "0.3"
+crossbeam-utils = "0.6"
 curl = "^0.4.20"
 curl-sys = "^0.4.20"
 futures-io-preview = "=0.3.0-alpha.17"
