--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -4,15 +4,15 @@ version = "0.0.0"
 edition = "2018"
 publish = false
 
-[dependencies.isahc]
-path = ".."
-
-[dev-dependencies]
+[dependencies]
 criterion = "0.2"
-env_logger = "0.6"
+curl = "0.4"
 rayon = "1"
 reqwest = "0.9"
 rouille = "3"
+
+[dependencies.isahc]
+path = ".."
 
 [[bench]]
 name = "download"
