--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,3 +1,12 @@
+categories:
+  - title: "Security"
+    label: security
+  - title: "Added"
+    label: feature
+  - title: "Fixed"
+    label: bug
+change-template: '- $TITLE (#$NUMBER) @$AUTHOR'
+no-changes-template: '- No changes'
 template: |
   ## Changed
 
