--- a/.github/workflows/psl-update.yml
+++ b/.github/workflows/psl-update.yml
@@ -11,23 +11,30 @@ jobs:
         with:
           submodules: true
 
-      - id: update-submodule
+      - id: update
         name: Update public suffix list submodule
         run: |
+          echo "::set-output name=old-sha::$(git -C src/cookies/psl/list rev-parse --short HEAD)"
           git -C src/cookies/psl/list checkout master
           git -C src/cookies/psl/list pull
-          echo "::set-output name=sha::$(git -C src/cookies/psl/list rev-parse HEAD)"
+          echo "::set-output name=new-sha::$(git -C src/cookies/psl/list rev-parse --short HEAD)"
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v1.6.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           COMMIT_MESSAGE: |
-            Update Public Suffix List to ${{ steps.update-submodule.outputs.sha }}.
+            Update Public Suffix List to ${{ steps.update.outputs.new-sha }}
           PULL_REQUEST_BRANCH: public-suffix-list/patch
           PULL_REQUEST_TITLE: |
-            Update Public Suffix List to ${{ steps.update-submodule.outputs.sha }}.
+            Update Public Suffix List to ${{ steps.update.outputs.new-sha }}
+          PULL_REQUEST_LABELS: dependencies
           PULL_REQUEST_BODY: |
-            Update Public Suffix List to [${{ steps.update-submodule.outputs.sha }}](https://github.com/publicsuffix/list/commit/${{ steps.update-submodule.outputs.sha }}).
+            Update Public Suffix List from
+            [${{ steps.update.outputs.old-sha }}](https://github.com/publicsuffix/list/commit/${{ steps.update.outputs.old-sha }})
+            to
+            [${{ steps.update.outputs.new-sha }}](https://github.com/publicsuffix/list/commit/${{ steps.update.outputs.new-sha }}).
 
-            This pull request was generated automatically.
+            This pull request was generated automatically. If you close this
+            pull request, I won't bother you again until the next automatically
+            scheduled update.
