--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,9 +69,11 @@ optional = true
 env_logger = "0.7"
 flate2 = "1.0"
 futures-preview = "0.3.0-alpha.18"
+indicatif = "0.12"
 mockito = "0.21"
 rayon = "1"
 speculate = "0.1"
+structopt = "0.3"
 
 [[example]]
 name = "async"
