Simplify handler response future

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ crossbeam-channel = "0.3"
 crossbeam-utils = "0.6"
 curl = "0.4.25"
 curl-sys = "0.4.23"
+futures-channel = "0.3"
 futures-io = "0.3"
 http = "0.1"
 lazy_static = "1"
