--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ http2 = ["curl/http2"]
 json = ["serde", "serde_json"]
 nightly = []
 psl = ["parking_lot", "publicsuffix"]
+spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
 middleware-api = []
 
