--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,11 @@ jobs:
   test:
     strategy:
       matrix:
-        platform:
+        os:
           - ubuntu-latest
           - macos-latest
           - windows-latest
-    runs-on: ${{ matrix.platform }}
+    runs-on: ${{ matrix.os }}
     env:
       RUST_BACKTRACE: 1
       RUST_LOG: isahc=debug
@@ -17,6 +17,9 @@ jobs:
       - uses: actions/checkout@master
         with:
           submodules: true
+
+      - run: apt install libkrb5-dev
+        if: matrix.os == 'ubuntu-latest'
 
       - uses: actions-rs/toolchain@v1
         with:
