Install libkrb5-dev

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           submodules: true
 
-      - run: apt install libkrb5-dev
+      - run: sudo apt install libkrb5-dev
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions-rs/toolchain@v1
