--- a/.github/workflows/configure-repo.yml
+++ b/.github/workflows/configure-repo.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - uses: micnncim/action-label-syncer@latest
+      - uses: micnncim/action-label-syncer@v0.3.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
