Remove cookies from default features
Fixes #141.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,6 @@ jobs:
           toolchain: "1.39.0"
           default: true
 
-      - run: cargo test --features psl,spnego
+      - run: cargo test --features cookies,psl,spnego
 
       - run: cargo run --release --example simple
