--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ features = ["json"]
 status = "actively-developed"
 
 [features]
-default = ["cookies", "http2", "static-curl"]
+default = ["http2", "static-curl"]
 cookies = ["chrono"]
 http2 = ["curl/http2"]
 json = ["serde", "serde_json"]
