Implement general text decoding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,13 @@ crossbeam-channel = "0.4"
 crossbeam-utils = "0.7"
 curl = "0.4.25"
 curl-sys = "0.4.23"
+encoding_rs = "0.8"
 futures-channel = "0.3"
 futures-io = "0.3"
 http = "0.2"
 lazy_static = "1"
 log = "0.4"
+mime = "0.3"
 slab = "0.4"
 sluice = "0.5"
 
