--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ psl = ["parking_lot", "publicsuffix"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
 text-decoding = ["encoding_rs", "mime"]
-middleware-api = []
+middleware-api-preview = []
 
 [dependencies]
 bytes = "0.5"
