--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,8 +80,8 @@ optional = true
 env_logger = "0.7"
 flate2 = "1.0"
 futures = "0.3"
+httptest = "0.11"
 indicatif = "0.13"
-mockito = "0.22"
 rayon = "1"
 speculate = "0.1"
 structopt = "0.3"
