Fix error installing libkrb5-dev in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
         with:
           submodules: true
 
-      - run: sudo apt install libkrb5-dev
+      - run: |
+          sudo apt update
+          sudo apt install libkrb5-dev
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions-rs/toolchain@v1
